# Nostalgic-Arcade

./: a.out  snak.cpp  tictactoe.cpp
Game/: CMakeLists.txt  Resource.qrc  choice.cpp  choice.h  choice.ui  create_table.sql  databaseconnect.cpp  databaseconnect.h  layout1.cpp  layout1.h  leadersnake.cpp  leadersnake.h  leadersnake.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowpingpong.cpp  mainwindowpingpong.h  mainwindowpingpong.ui  snakegame.cpp  snakegame.h  snakehighscores.db
Home/: Home.pro  Home.pro.qtds  choice.cpp  choice.h  choice.ui  choice2.cpp  choice2.ui  gameboard.cpp  gameboard.h  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mode2.cpp  mode2.h  mode2.ui  photo.qrc  resource.qrc  snakemain.cpp  snakemain.h
Home/SPR/: CMakeLists.txt  buttonPaper.qrc  buttonRock.qrc  buttonScissor.qrc  imageScissor.qrc  main.cpp  paper.qrc  rock.qrc  scissor.qrc  scissorsmainwindow.cpp  scissorsmainwindow.h  scissorsmainwindow.ui
Home/pingpong/: CMakeLists.txt  levelpingpong.ui  levelselectiondialog.cpp  levelselectiondialog.h  main.cpp  mainwindow.ui  mainwindowpingpong.cpp  mainwindowpingpong.h  mainwindowpingpong.ui  pingpongresult.cpp  pingpongresult.h  pingpongresult.ui  ui_pingpongresult.ui
Home/projectTictac/: CMakeLists.txt  main.cpp  mainwindowtictactoe.cpp  mainwindowtictactoe.h  mainwindowtictactoe.ui  result.cpp  result.h  result.ui
Home/snake/: food.cpp  food.h  mainwindow.cpp  mainwindow.h  snake.cpp  snake.h  snake.pro
Home/snake1/: resource.qrc  snake1.pro  snakegame.cpp  snakegame.h  snakemain.cpp
snakee/: snake.cpp  snake.h
snakqt/: Game.cpp  Game.h  main.cpp  snakqt.pro
untitled/: main.cpp
